# ESP32_Telemetry_module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.old
components/mavlink/: CMakeLists.txt
main/: CMakeLists.txt  Queue1.c  gps.c  main.c  main1.c  main2.c  main3.c  nparalel.c  paralel.c  sdkconfig  semaphor.c  struct.c  task.c
main/include/: data_manager.h  mavlink_handler.h  tcp_server.h  uart_manager.h  wifi_manager.h
main/main/: CMakeLists.txt  main.c  main2.c  struct.c
main/src/: data_manager.c  main3.c  mavlink_handler.c  tcp_server.c  uart_manager.c  wifi_manager.c
